--- a/api/package.json
+++ b/api/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "lsof": "^0.1.0",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
